resolved fdo#57841 ignore embedded NULL characters in CSV import

Change-Id: Ib0eb044f009227c0aa6e1bc520905d605323c3db
(cherry picked from commit 8970e14d7494859c6079ef2a976416598823ba50)
Reviewed-on: https://gerrit.libreoffice.org/2336
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>